# bulletsim

./: .gitignore  CMakeLists.txt  make_eclipse_project.sh  package.xml  planner_plugin_description.xml
data/planning/: hanoi_grasp.json  pa10.json  wam.json  wam2.json  wam3.json
include/sqpp_interface_ros/: rosconversions.h  sqpp_interface_ros.h
launch/: dbg_move_group.launch  my_pipeline.launch  play_cloud.launch  point_clouds.launch  record_cloud.launch  sqp_demo.launch
lib/osgWorks-2.0/osgwTools/: TransparencyUtils.h
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/clouds/: Makefile  cmake_install.cmake  geom.cpp  utils_pcl.cpp  utils_pcl.h
src/comm/: Makefile  cmake_install.cmake
src/flattening/: Makefile  cmake_install.cmake
src/john_sandbox/: CMakeLists.txt  test_rave_load2.cpp
src/knots/: CMakeLists.txt  Makefile  cmake_install.cmake
src/moveit/: CMakeLists.txt  rosconversions.cpp  sqpp_interface_ros.cpp  sqpp_plugin.cpp  test_ros_rave.cpp
src/perception/: Makefile  cmake_install.cmake
src/robots/: CMakeLists.txt  Makefile  cmake_install.cmake
src/sandbox/: Makefile  cmake_install.cmake
src/simulation/: CMakeLists.txt  Makefile  basicobjects.h  cmake_install.cmake  config_bullet.cpp  convexdecomp.cpp  convexdecomp.h  environment.cpp  environment.h  openravesupport.cpp  openravesupport.h  openravesupport_20120829.cpp  openravesupport_original.cpp
src/sqp/: CMakeLists.txt  collisions.cpp  interact_with_point_cloud.cpp  kinematics_utils.cpp  kinematics_utils.h  planning_problems.cpp  planning_problems.h  plotters.cpp  plotters.h  sqp_algorithm.cpp  sqp_algorithm.h  test_base_planner.cpp  test_rave_env.cpp  test_traj_eval_grb2.cpp  traj_costs.cpp  traj_costs.h  traj_sqp.cpp  utils_openrave.cpp  utils_openrave.h
src/tests/: CMakeLists.txt  Makefile  cmake_install.cmake  colab_cloth.h  test_colab_cloth.cpp
src/tests/CollabFolding/: CMakeLists.txt  CustomKeyHandler.cpp  CustomKeyHandler.h  CustomScene.cpp  CustomScene.h  GripperKinematicObject.cpp  GripperKinematicObject.h  collab_folding_utils.h  config.h  example_icp.cpp  step_state.h  test_collab_folding.cpp
src/tests/GripperKinematicObject/: CMakeLists.txt  CustomKeyHandler.cpp  CustomKeyHandler.h  CustomScene.cpp  CustomScene.h  GripperKinematicObject.cpp  GripperKinematicObject.h  GripperKinematicObject.h.in  PR2SoftBodyGripperAction.h  collab_folding_utils.cpp  collab_folding_utils.h  config.h.in  step_state.h  test_collab_folding.cpp  test_collab_folding.cpp.in
src/tests/GripperKinematicaObject/: GripperKinematicObject.cpp  GripperKinematicObject.h  colab_folding_utils.cpp
src/tracking/: CMakeLists.txt  config_tracking.cpp  robot_tracker_node.cpp  towel_corners.cpp  towel_corners_old.cpp
src/tracking/objects/: table.xml
src/utils/: CMakeLists.txt  Makefile  cmake_install.cmake
