<package>
  <name>bulletsim</name>
  <version>0.0.0</version>
  <description>Bulletsim</description>
  <author email="a@b.com">A B</author>
  <maintainer email="a@b.com">A B</maintainer>

  <license>ABC</license>

  <!-- <url type="website">http://moveit.ros.org</url> -->
  <!-- <url type="bugtracker">https://github.com/ros-planning/moveit-planners/issues</url> -->
  <!-- <url type="repository">https://github.com/ros-planning/moveit-planners</url> -->
  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <moveit_core plugin="${prefix}/planner_plugin_description.xml"/>

    <!-- <planning_interface plugin="${prefix}/planner_plugin_description.xml"/> -->
  </export>

</package>
